# miniature-tracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  main.cpp  miniature-tracer.code-workspace  vcpkg-configuration.json  vcpkg.json
cpp/: main.cpp
cpp/include/Bindings/: PythonManager.hpp
cpp/src/Bindings/: PythonManager.cpp  pybindings.cpp
py/: requirements.txt  setup.cfg
py/src/Bindings/: simple_test.py
py/src/mypkg/: __init__.py
